--- a/index.html
+++ b/index.html
@@ -6,14 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&family=Permanent+Marker&family=Roboto:wght@100;300;400;500&display=swap" rel="stylesheet">
+    <link rel="icon" href="img/H-logos.jpeg">
     <link rel="stylesheet" href="css/custom.css">
 </head>
 <body>
-    <!-- NAVBAR -->
-    <div class="container">
+    <!-- navbar -->
+    <div class="container-fluid nav-div">
         <nav class="navbar navbar-expand-md navbar-light">
             <a href="#" class="navbar-brand">
-                <img src="" alt="" width="30" height="24"
+                <img src="img/H-logos.jpeg" alt="" width="30" height="24"
                 class="d-inline-block align-top" />
                 <span class="hidden">Bootstrap</span>
                 </a>
@@ -29,22 +33,32 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="toggleMobileMenu">
-                <ul class="navbar-nav ms-auto text-center">
-                    <li>
-                        <a class="nav-link" href="#who">Who</a>
-                    </li>
-                    <li>
-                        <a class="nav-link" href="#what">What</a>
-                    </li>
-                    <li>
-                        <a class="nav-link" href="#work">Work</a>
-                    </li>
-                    <li>
-                        <a class="nav-link" href="#contact">Contact</a>
-                    </li>
+                <ul class="navbar-nav  m-auto text-center">
+                    <li><a class="nav-link" href="#who">Who</a></li>
+                    <li><a class="nav-link" href="#what">What</a></li>
+                    <li><a class="nav-link" href="#work">Work</a></li>
                 </ul>
+                <a href="#contact" class="nav-link d-inline-block nav-contact">Contact</a>
             </div>
         </nav>
     </div>
+    <!-- /navbar -->
+    <!-- Jumbotron -->
+    <div class="jumbotron">
+        <div class="container-fluid" style="height: 45rem">
+         <h4 class="text-center pt-5" style="font-family: 'Permanent Marker', cursive;">Hey there, I'm Hassan.<br>A web developer and designer based in Canada.</h4>
+         
+         <div class="main-btn-div" style="margin-top: 150px; ">
+            <button type="button" class="main-btn">Explore</button>
+        </div>   
+
+        </div>
+
+        <div class="sidebar-div">
+            <a href="mailto:hassan.issa2@outlook.com" class="sidebar-email">hassan.issa2@outlook.com</a>
+        </div>
+
+      </div>
+    <!-- Jumbotron -->
 </body>
 </html>
