added visual hand object

--- a/index.html
+++ b/index.html
@@ -38,11 +38,12 @@
     <div class="jumbotron">
         <div class="container-fluid" style="height: 40rem">
             <h4 class="text-center pt-5 main-heading">DevByHassan.</h4>
-            <h4 class="text-center pt-4 sub-heading">Web Design. Development, and Marketing.</h4>
-            <div class="main-btn-div" style="margin-top: 150px; ">
-            <button type="button" class="main-btn">Explore</button>
-            </div>   
+            <h4 class="text-center pt-1 sub-heading">Web Design. Development, and Marketing.</h4>
+            <div>
+                <img src="img/hand.png" class="mx-auto d-block" width="300px">
             </div>
+            
+         
             <!-- <div class="sidebar-div">
             <a href="mailto:hassan.issa2@outlook.com" class="sidebar-email">hassan.issa2@outlook.com</a>
             </div> -->
@@ -51,12 +52,12 @@
     <!-- desgin bar -->
 
     <!-- /desgin bar -->
-
-    <div class="container-fluid" style="background-color: #EDF5E1; height: 5px;"></div>
+<!-- 
+    <div class="container-fluid" style="background-color: #EDF5E1; height: 15rem;"></div> -->
 
     <!-- intro section -->
     <div class="container-fluid intro-page text-center">
-        <p class="mt-3">Hassan Issa - CD / CO-FOUNDER</p>
+        <p>Hassan Issa - CD / CO-FOUNDER</p>
         <h4 class="intro-header">Napoleon Complex.</h4>
         <p><b>A hands-on creative with more than 16 years design expereince</b></p>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatem exercitationem eos reprehenderit, accusantium inventore in maxime placeat officiis dolorum! Earum consectetur, minima fugit laborum mollitia maiores id voluptatem iure architecto?</p>
@@ -78,9 +79,10 @@
     <!-- /intro section -->
 
     <!-- recent work -->
-    <div class="container-fluid text-center" style="background-color: #5CDB95; height: 50rem;">
-        <h4 class="recent-header pt-5">Recent Work</h4>
-        <div class="main-btn-div" style="margin-top: 75px; ">
+    <div class="container-fluid recent" style="background-color: #5CDB95; height: 40rem;">
+        <!-- <img src="img/hand2.png" width="300px"> -->
+        <h4 class="recent-header text-center" style="padding-top: 10rem;">Recent Work</h4>
+        <div class="main-btn-div" style="margin-top: 20px;">
             <button type="button" class="main-btn">View all work</button>
         </div> 
     </div>
