--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> 
     <link rel="stylesheet" href="https://use.typekit.net/mvl4ewo.css">
     <link rel="stylesheet" href="https://use.typekit.net/hdh7fpe.css">
-    <link rel="icon" href="img/H-logos.jpeg">
+    <link rel="icon" href="img/logo.png">
     <link rel="stylesheet" href="css/custom.css">
 </head>
 <body>
@@ -16,7 +16,7 @@
     <div class="container-fluid nav-div">
         <nav class="navbar navbar-expand-md navbar-light">
             <a href="#" class="navbar-brand">
-                <img src="" alt="" width="30" height="24"
+                <img src="img/logo.png" alt="" width="30" height="24"
                 class="d-inline-block align-top" />
                 <span class="hidden">Bootstrap</span>
                 </a>
@@ -36,31 +36,20 @@
     <!-- /navbar -->
     <!-- jumbotron -->
     <div class="jumbotron">
-        <div class="container-fluid" style="height: 40rem">
-            <h4 class="text-center pt-5 main-heading">DevByHassan.</h4>
-            <h4 class="text-center pt-1 sub-heading">Web Design. Development, and Marketing.</h4>
-            <div>
-                <img src="img/hand.png" class="mx-auto d-block" width="300px">
-            </div>
-            
-         
-            <!-- <div class="sidebar-div">
-            <a href="mailto:hassan.issa2@outlook.com" class="sidebar-email">hassan.issa2@outlook.com</a>
-            </div> -->
+        <div class="container-fluid" style="height: 24rem">
+            <h4 class="text-center main-heading">DevByHassan.</h4>
+            <h4 class="text-center sub-heading">Web Design. Development, and Marketing.</h4>
+                <img src="img/hand2.png" class="hand1">
+        </div>
     </div>
     <!-- /jumbotron -->
-    <!-- desgin bar -->
-
-    <!-- /desgin bar -->
-<!-- 
-    <div class="container-fluid" style="background-color: #EDF5E1; height: 15rem;"></div> -->
 
     <!-- intro section -->
     <div class="container-fluid intro-page text-center">
-        <p>Hassan Issa - CD / CO-FOUNDER</p>
+        <p class="introp0">Hassan Issa - CD / CO-FOUNDER</p>
         <h4 class="intro-header">Napoleon Complex.</h4>
-        <p><b>A hands-on creative with more than 16 years design expereince</b></p>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatem exercitationem eos reprehenderit, accusantium inventore in maxime placeat officiis dolorum! Earum consectetur, minima fugit laborum mollitia maiores id voluptatem iure architecto?</p>
+        <p class="introp1"><b>A hands-on creative with more than 16 years design expereince</b></p>
+        <p class="introp2">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatem exercitationem eos reprehenderit, accusantium inventore in maxime placeat officiis dolorum! Earum consectetur, minima fugit laborum mollitia maiores id voluptatem iure architecto?</p>
         <div class="mb-5">
             <svg class="social-icons" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
                 <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"/>
@@ -75,20 +64,23 @@
                 <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
             </svg>
         </div>
+        <img src="img/hand4.png" class="hand2" width="300px">
     </div>
     <!-- /intro section -->
 
     <!-- recent work -->
-    <div class="container-fluid recent" style="background-color: #5CDB95; height: 40rem;">
-        <!-- <img src="img/hand2.png" width="300px"> -->
+    <div class="container-fluid recent" style="background-color: #5CDB95; height: 35rem;">
         <h4 class="recent-header text-center" style="padding-top: 10rem;">Recent Work</h4>
-        <div class="main-btn-div" style="margin-top: 20px;">
-            <button type="button" class="main-btn">View all work</button>
+        <div class="main-btn-div" style="margin-top: 50px;">
+            <button type="button" class="main-btn mx-auto d-block">View all work</button>
         </div> 
     </div>
     <!-- /recent work -->
 
-    <div class="container-fluid" style="background-color:#EDF5E1; height: 30rem;"></div>
+    <div class="container-fluid DevByHassan" style="background-color: white; height: 10rem;">
+        <h5 class="peace-content text-center">#DevByHassan</h5>
+        <img src="img/hand3.png" width="80" class="peace-img">
+    </div>
 
 
 </body>
