Rough draft of landing page

--- a/index.html
+++ b/index.html
@@ -13,45 +13,129 @@
 <body>
     <!-- LANDING PAGE HEADER -->
     <header>
-        <div class="container-fluid nav-div mb-4">
-            <nav class="navbar navbar-expand-md navbar-light">
-                <a href="#" class="navbar-brand">
-                    <span class="logo">#DevByHassan.</span>
-                    </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#toggleMobileMenu" aria-controls="toggleMobileMenu" aria-expanded="false" aria-lable="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="toggleMobileMenu">
-                    <ul class="navbar-nav  m-auto text-center">
-                        <li><a class="nav-link" href="#who">Who</a></li>
-                        <li><a class="nav-link" href="#what">What</a></li>
-                        <li><a class="nav-link" href="#work">Work</a></li>
-                    </ul>
-                    <a href="#contact" class="nav-link d-inline-block nav-contact">Contact</a>
-                </div>
-            </nav>
-        </div>
-        <div class="container">
-            <p class="landing-page-content">There are many variations of passages.</p>
-            <p class="landing-page-description">Typesetting industry. Lorem Ipsum has been the <br> industry's standard dummy </p>
-            <p class="landing-page-description2">Lorem Ipsum is simply dummy, <br> of the printing and.</p>
-        </div>
-    </header>
+      <section class="outter">
+        <section class="video-container">
+          <video src="img/AdobeStock_501439627_Video_4K_Preview.mov" autoplay loop playsinline muted></video>
+          <div class="callout">
+            <h1>#DevByHassan</h1>
+            <div class="button"><div class="inner">Contact<div>
+          </div>
+        </section>
+      </section>
     <!-- /LANDING PAGE HEADER -->
 
-    <!-- MAIN PAGE CONTENT  --> 
-    <div class="container main-page text-center">
-        <p class="main-page-content step">MARKETING <br><br> Lorem, ipsum dolor sit amet <br> consectetur</p> 
-        <p class="main-page-content step1">MARKETING <br><br> Lorem, ipsum dolor sit amet <br> consectetur</p> 
-        <p class="main-page-content step2">MARKETING <br><br> Lorem, ipsum dolor sit amet <br> consectetur</p> 
-        <p class="main-page-content step3">MARKETING <br><br> Lorem, ipsum dolor sit amet <br> consectetur</p> 
-        <p class="main-page-content step4">MARKETING <br><br> Lorem, ipsum dolor sit amet <br> consectetur </p> 
-    </div>
-   
-    <!-- /MAIN PAGE CONTENT  -->
-    <section class="container-fluid shape">
-
+    <!-- NAVIGATION  -->
+    <section class="nav">
+      <div class="container-fluid">  
+        <nav>
+          <ul class="nav justify-content-center">
+            <li class="nav-item">
+              <a class="nav-link active" href="#">WHO</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">WHAT</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">WORK</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
     </section>
+  </header>
+  <!-- /NAVIGATION  -->
 
+   <!-- BACKGROUND  -->
+ <div class="background-design">
+   <img src="img/Sprinkle.svg">
+   <img src="img/Sprinkle.svg">
+   <img src="img/Sprinkle.svg">
+ </div>
+  <!-- /BACKGROUND  -->
+
+  <!-- SKILLS  -->
+  <div class="container pt-5 text-center">
+    <div class="row">
+      <div class="col-md mb-4 skill">
+        <h5 class="mb-4 mt-3">DESIGN</h5>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit, recusandae quo. Earum sit nobis ut at quaerat voluptates reprehenderit provident dolore animi numquam, magnam quam tenetur, rem explicabo voluptatibus expedita? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia aspernatur nostrum quibusdam incidunt autem aperiam esse odio est, impedit illo ratione? Ipsum debitis facere minima quas perferendis similique sed error.</p>
+      </div>
+      <div class="col-md mb-4 skill">
+        <h5 class="mb-4 mt-3">FRONT-END WEB DEVELOPMENT</h5>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis voluptates veniam quam porro nihil inventore quasi ea, ut repudiandae praesentium quaerat suscipit iusto ad alias culpa quidem facere omnis eius? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis quaerat alias minima est fuga minus iusto cumque doloribus enim recusandae! Minus hic necessitatibus ipsa eos molestias ut laborum natus nostrum.</p>
+      </div>
+      <div class="col-md mb-4 skill">
+        <h5 class="mb-4 mt-3">MARKETING</h5>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit qui unde quae quos, tempore, magni dolor alias et perspiciatis doloremque itaque quod sit ullam, culpa aspernatur sed ipsum saepe sequi? Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique numquam quis hic tempore modi officia pariatur deserunt iusto nam exercitationem beatae nisi aut alias, deleniti facilis dignissimos sapiente provident quasi!</p>
+      </div>
+    </div>
+  </div>
+  <!-- /SKILLS  -->
+
+
+  <!--- RECENT WORK --->
+  <div class="row container-fluid text-center">
+    <div class="col-md-6">
+      <div class="card mb-3">
+        <img class="card-img-top" src="..." alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <div class="card mb-3">
+        <img class="card-img-top" src="..." alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <div class="card mb-3">
+        <img class="card-img-top" src="..." alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <div class="card mb-3">
+        <img class="card-img-top" src="..." alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <div class="card mb-3">
+        <img class="card-img-top" src="..." alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <div class="card mb-3">
+        <img class="card-img-top" src="..." alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+      </div>
+    </div>
+  </div>
+    <!--- RECENT WORK --->
+
+
+   
+
+
+
+    
 </body>
 </html>
