added who section

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Porfolio</title>
 </head>
 <body>
-    <!-- LANDING PAGE HEADER -->
+  <!-- LANDING PAGE HEADER -->
     <header>
       <section class="outter">
         <section class="video-container">
@@ -72,14 +72,27 @@
   </div>
   <!-- /SKILLS  -->
 
-
+  <!-- WHO PAGE -->
+  <div class="container who">
+    <h1>Napoleon Complex.</h1>
+    <h5>A hands-on creative with more than 16 years design experience.</h5>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quam optio alias consectetur vero iste enim qui inventore! Nulla odio officiis est sunt deserunt aspernatur cupiditate, corrupti quibusdam reprehenderit optio possimus.</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quam optio alias consectetur vero iste enim qui inventore! Nulla odio officiis est sunt deserunt aspernatur cupiditate, corrupti quibusdam reprehenderit optio possimus.</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quam optio alias consectetur vero iste enim qui inventore! Nulla odio officiis est sunt deserunt aspernatur cupiditate, corrupti quibusdam reprehenderit optio possimus.</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quam optio alias consectetur vero iste enim qui inventore! Nulla odio officiis est sunt deserunt aspernatur cupiditate, corrupti quibusdam reprehenderit optio possimus.</p>
+  </div>
+  <!-- /WHO PAGE -->
+    
   <!--- RECENT WORK --->
-  <div class="row container-fluid text-center">
+  <section class="recent-cards container pt-5">
+  <div class="row text-center recent-work mt-5">
+    <h1 class="recent-heading">Recent Work</h1>
+    <p class="recent-description">Here are a few design projects I've worked on recently.</p>
     <div class="col-md-6">
       <div class="card mb-3">
         <img class="card-img-top" src="..." alt="Card image cap">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
+          <h5 class="card-title">API Employee Directory</h5>
           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
         </div>
       </div>
@@ -88,7 +101,7 @@
       <div class="card mb-3">
         <img class="card-img-top" src="..." alt="Card image cap">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
+          <h5 class="card-title">Game Show Application</h5>
           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
         </div>
       </div>
@@ -97,7 +110,7 @@
       <div class="card mb-3">
         <img class="card-img-top" src="..." alt="Card image cap">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
+          <h5 class="card-title">Web-Application Dashboard</h5>
           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
         </div>
       </div>
@@ -106,7 +119,7 @@
       <div class="card mb-3">
         <img class="card-img-top" src="..." alt="Card image cap">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
+          <h5 class="card-title">Online Registration Form</h5>
           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
         </div>
       </div>
@@ -115,7 +128,7 @@
       <div class="card mb-3">
         <img class="card-img-top" src="..." alt="Card image cap">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
+          <h5 class="card-title">Web-Style Guide</h5>
           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
         </div>
       </div>
@@ -124,18 +137,14 @@
       <div class="card mb-3">
         <img class="card-img-top" src="..." alt="Card image cap">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
+          <h5 class="card-title">Responsive Layout</h5>
           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
       </div>
     </div>
   </div>
-    <!--- RECENT WORK --->
+</section>
+  <!--- RECENT WORK --->
 
 
-   
-
-
-
-    
 </body>
 </html>
