--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> 
     <link rel="stylesheet" href="design/styles.css">
-    <link rel="stylesheet" href="https://use.typekit.net/mvl4ewo.css">
     <link rel="stylesheet" href="https://use.typekit.net/hdh7fpe.css">
     <title>Porfolio</title>
 </head>
@@ -15,7 +14,7 @@
     <header>
       <section class="outter">
         <section class="video-container">
-          <video src="img/AdobeStock_501439627_Video_4K_Preview.mov" autoplay loop playsinline muted></video>
+          <video src="img/AdobeStock_501242994_Video_4K_Preview.mov" autoplay loop playsinline muted></video>
           <div class="callout">
             <h1>#DevByHassan</h1>
             <div class="button"><div class="inner">Contact<div>
@@ -30,13 +29,13 @@
         <nav>
           <ul class="nav justify-content-center">
             <li class="nav-item">
-              <a class="nav-link active" href="#">WHO</a>
+              <a class="nav-link active" href="index.html">WHO</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">WHAT</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">WORK</a>
+              <a class="nav-link" href="work.html">WORK</a>
             </li>
           </ul>
         </nav>
@@ -45,28 +44,8 @@
   </header>
   <!-- /NAVIGATION  -->
 
-  <!-- /BLOCKS DESIGN  -->
-  <div class="blocks">
-    <div class="element"></div>
-  </div>
-  <div class="blocks1">
-    <div class="element1"></div>
-  </div>
-  <div class="blocks2">
-    <div class="element2"></div>
-  </div>
-  <!-- /BLOCKS DESIGN  -->
-
-   <!-- BACKGROUND  -->
-    <div class="background-design">
-      <img src="img/Sprinkle.svg">
-      <img src="img/Sprinkle.svg">
-      <img src="img/Sprinkle.svg">
-    </div>
-  <!-- /BACKGROUND  -->
-
   <!-- SKILLS  -->
-  <div class="container pt-5 text-center">
+  <div class="container-fluid pt-5 text-center">
     <div class="row">
       <div class="col-md mb-4 skill">
         <h5 class="mb-4 mt-3">DESIGN</h5>
@@ -96,7 +75,7 @@
   <!-- /WHO PAGE -->
     
   <!-- SOCIAL ICONS -->
-  <div class="social-icons mt-5 mb-5 container">
+  <div class="social-icons mt-5 mb-5 container grow">
     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="16" fill="currentColor" class="bi bi-twitter" viewBox="0 0 16 16">
       <path d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334 0-.14 0-.282-.006-.422A6.685 6.685 0 0 0 16 3.542a6.658 6.658 0 0 1-1.889.518 3.301 3.301 0 0 0 1.447-1.817 6.533 6.533 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.325 9.325 0 0 1-6.767-3.429 3.289 3.289 0 0 0 1.018 4.382A3.323 3.323 0 0 1 .64 6.575v.045a3.288 3.288 0 0 0 2.632 3.218 3.203 3.203 0 0 1-.865.115 3.23 3.23 0 0 1-.614-.057 3.283 3.283 0 0 0 3.067 2.277A6.588 6.588 0 0 1 .78 13.58a6.32 6.32 0 0 1-.78-.045A9.344 9.344 0 0 0 5.026 15z"/>
     </svg>
@@ -116,11 +95,73 @@
   <!-- /SOCIAL -->
 
   <!-- RECENT-WORK-BUTTON -->
-  <div class="recent-work-button container pt-5 pb-5 text-center">
-    <p class="pb-5">Recent Work</p>
-    <button type="button">Projects</button>
+  <div class="recent-work-button container-fluid text-center">
+    <p class="pb-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae adipisci beatae quibusdam.</p>
+    <button type="button">Contact</button>
   </div>
   <!-- /RECENT-WORK-BUTTON -->
+
+  <!--- RECENT WORK --->
+  <section class="recent-cards container-fluid text-center">
+    <div class="row recent-work mt-5">
+      <h1 class="recent-heading text-center mt-5">Recent Work.</h1>
+      <div class="col-md-4">
+        <div class="card mb-3">
+          <img class="card-img-top overlay-effect" src="img/directory.png" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">API Employee Directory</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card mb-3">
+          <img class="card-img-top overlay-effect" src="img/Game (1).png" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Game Show Application</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card mb-3">
+          <img class="card-img-top overlay-effect" src="img/web app.png" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Web-Application Dashboard</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card mb-3">
+          <img class="card-img-top overlay-effect" src="img/registration form.png" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Online Registration Form</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card mb-3">
+          <img class="card-img-top overlay-effect" src="img/guide.png" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Web-Style Guide</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card mb-3">
+          <img class="card-img-top overlay-effect" src="img/responsive layout.png" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Responsive Layout</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        </div>
+      </div>
+    </div>
+    <h1 class="recent-heading text-center">Recent Work.</h1>
+  </section>
+  <!--- RECENT WORK --->
 
   <!-- FOOTER -->
   <div class="footer">
