--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
       <section class="outter">
         <section class="video-container">
-          <video src="img/AdobeStock_344450452.mov" autoplay loop muted></video>
+          <video src="img/AdobeStock_344450452.mov" autoplay playsinline loop muted></video>
           <div class="callout">
             <h1>#DevByHassan</h1>
             <div class="button"><div class="inner">Contact<div>
