--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 
   <!-- LANDING PAGE HEADER -->
     <header>
-      <section class="outter">
-        <section class="video-container">
+      <div class="outter">
+        <div class="video-container">
           <video src="img/AdobeStock_344450452.mov" autoplay loop muted playsinline></video>
           <div class="callout">
-            <h1>#DevByHassan</h1>
-            <button class="button" type="button btn btn-primary"><div class="inner" data-bs-toggle="modal" data-bs-target="#exampleModal">Contact<button>
+            <h2>#DevByHassan</h2>
+            <button class="button inner" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal">Contact</button>
           </div>
 
           <!-- Modal -->
@@ -54,12 +54,12 @@
               </div>
             </div>
           </div>
-        </section>
-      </section>
+        </div>
+      </div>
     <!-- /LANDING PAGE HEADER -->
 
     <!-- NAVIGATION  -->
-    <section class="nav">
+    <div class="nav">
       <div class="container-fluid">  
         <nav>
           <ul class="nav justify-content-center">
@@ -75,14 +75,14 @@
           </ul>
         </nav>
       </div>
-    </section>
+    </div>
   </header>
   <!-- /NAVIGATION  -->
 
   <!-- SOCIAL ICONS -->
     <div class="social-icons mt-2 container grow">
       <a href="https://twitter.com/devbyhassan" target="_blank">
-        <svg target="#www.google.ca" xmlns="http://www.w3.org/2000/svg" width="20" height="16" fill="currentColor" class="bi bi-twitter" viewBox="0 0 16 16">
+        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="16" fill="currentColor" class="bi bi-twitter" viewBox="0 0 16 16">
           <path d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334 0-.14 0-.282-.006-.422A6.685 6.685 0 0 0 16 3.542a6.658 6.658 0 0 1-1.889.518 3.301 3.301 0 0 0 1.447-1.817 6.533 6.533 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.325 9.325 0 0 1-6.767-3.429 3.289 3.289 0 0 0 1.018 4.382A3.323 3.323 0 0 1 .64 6.575v.045a3.288 3.288 0 0 0 2.632 3.218 3.203 3.203 0 0 1-.865.115 3.23 3.23 0 0 1-.614-.057 3.283 3.283 0 0 0 3.067 2.277A6.588 6.588 0 0 1 .78 13.58a6.32 6.32 0 0 1-.78-.045A9.344 9.344 0 0 0 5.026 15z"/>
         </svg>
       </a>
@@ -96,8 +96,8 @@
           <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"/>
         </svg>
       </a>
-      <a href="mailto: hassan.issa2@outlook.com">
-        <svg xmlns="https://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope" viewBox="0 0 16 16">
+      <a href="mailto:hassan.issa2@outlook.com">
+        <svg width="16" height="16" fill="currentColor" class="bi bi-envelope" viewBox="0 0 16 16">
           <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4Zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2Zm13 2.383-4.708 2.825L15 11.105V5.383Zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741ZM1 11.105l4.708-2.897L1 5.383v5.722Z"/>
         </svg>
       </a>
@@ -108,14 +108,14 @@
   <div class="container pt-3 text-center" id="what">
     <div class="row">
       <div class="col-md mb-2 skill pt-2">
-        <img src="img/pencil (1).png" width="150px" height="80px">
+        <img src="img/pencil.png" alt="pencils" width="150" height="80">
         <h5 class="mt-3">DESIGN</h5>
         <p>I enjoy bringing visually-appealing concepts to real life through clean and simple design. First impressions are essential. A thoughtful and creative website design is vital to attracting more users.</p>
         <h5 class="mt-4">Design Tools</h5>
           <p>Adobe Photoshop<br>Adobe Illustrator<br>Adobe InDesign <br> Bannersnack <br> Adobe Fonts <br> ColorZilla <br> Canva</p>
       </div>
       <div class="col-md mb-2 skill pt-2">
-        <img src="img/webdev.png" width="150px" height="80px">
+        <img src="img/webdev.png" alt="development" width="150" height="80">
         <h5 class="mt-3">FRONT-END WEB DEVELOPMENT</h5>
         <p>My background in multiple web technologies allows me to add interactivity to web pages, enhance browser security, and manage web content dynamically, which creates a fantastic experience for website users!</p>
         <h5 class="mt-4">Dev Tools</h5>
@@ -133,14 +133,14 @@
   </div>
   <!-- /WHO PAGE -->
 
-  <!--- RECENT WORK --->
+  <!-- RECENT WORK -->
   <section class="recent-cards container-fluid text-center" id="work">
     <div class="row recent-work">
-      <h1 class="recent-heading text-center mt-5">Recent Work.</h1>
+      <h2 class="recent-heading text-center mt-5">Recent Work.</h2>
 
         <div class="col-md-4">
           <div class="card mb-3">
-            <a href="https://hassan2825.github.io/api-employee-directory/">
+            <a href="https://hassan2825.github.io/api-employee-directory/" target="_blank">
               <img class="card-img-top overlay-effect" src="img/directory.png" alt="Card image cap">
               <div class="card-body">
                 <h5 class="card-title">API Employee Directory</h5>
@@ -152,8 +152,8 @@
 
         <div class="col-md-4">
           <div class="card mb-3">
-            <a href="https://hassan2825.github.io/game-show-app/">
-              <img class="card-img-top overlay-effect" src="img/Game (1).png" alt="Card image cap">
+            <a href="https://hassan2825.github.io/game-show-app/" target="_blank">
+              <img class="card-img-top overlay-effect" src="img/Game.png" alt="Card image cap">
               <div class="card-body">
                 <h5 class="card-title">Game Show Application</h5>
                 <p class="card-text">The wheel of success challenges the user to figure out the hidden phrase by clicking letters on the screen. Run out of hearts before you guess the sentence, then you lose.</p>
@@ -164,8 +164,8 @@
 
         <div class="col-md-4">
           <div class="card mb-3">
-            <a href="https://hassan2825.github.io/webApp-Dashboard/">
-              <img class="card-img-top overlay-effect" src="img/web app.png" alt="Card image cap">
+            <a href="https://hassan2825.github.io/webApp-Dashboard/" target="_blank">
+              <img class="card-img-top overlay-effect" src="img/webapp.png" alt="Card image cap">
               <div class="card-body">
                 <h5 class="card-title">Web-Application Dashboard</h5>
                 <p class="card-text">This project uses HTML, CSS, Javascript and SVG graphics and animations. The web page neatly displays analytics on a dashboard, including Javascript interactivity.</p>
@@ -176,8 +176,8 @@
 
         <div class="col-md-4">
           <div class="card mb-3">
-            <a href="https://hassan2825.github.io/online-registration-form/">
-              <img class="card-img-top overlay-effect" src="img/registration form.png" alt="Card image cap">
+            <a href="https://hassan2825.github.io/online-registration-form/" target="_blank">
+              <img class="card-img-top overlay-effect" src="img/registrationform.png" alt="Card image cap">
               <div class="card-body">
                 <h5 class="card-title">Online Registration Form</h5>
                 <p class="card-text">This project displays a responsive, mobile-friendly registration form using various HTML form input types and attributes.</p>
@@ -188,7 +188,7 @@
 
         <div class="col-md-4">
           <div class="card mb-3">
-            <a href="https://hassan2825.github.io/web-style-guide/">
+            <a href="https://hassan2825.github.io/web-style-guide/" target="_blank">
               <img class="card-img-top overlay-effect" src="img/guide.png" alt="Card image cap">
               <div class="card-body">
                 <h5 class="card-title">Web-Style Guide</h5>
@@ -200,8 +200,8 @@
 
         <div class="col-md-4">
           <div class="card mb-3">
-            <a href="https://hassan2825.github.io/responsive-layout-site/">
-              <img class="card-img-top overlay-effect" src="img/responsive layout.png" alt="Card image cap">
+            <a href="https://hassan2825.github.io/responsive-layout-site/" target="_blank">
+              <img class="card-img-top overlay-effect" src="img/responsivelayout.png" alt="Card image cap">
               <div class="card-body">
                 <h5 class="card-title">Responsive Layout</h5>
                 <p class="card-text">This project demonstrates responsive web design principles to create a page that changes based on the browser viewing the page.</p>
@@ -209,15 +209,16 @@
             </a>
           </div>
         </div>
-  </section>
-  <!--- RECENT WORK --->
-
-    <!-- RECENT-WORK-BUTTON -->
-    <div class="recent-work-button container-fluid text-center">
-      <p class="pb-1">Looking to get in touch or talk about a project?</p>
-      <button type="button" data-bs-toggle="modal" data-bs-target="#exampleModal">Contact</button>
     </div>
-    <!-- /RECENT-WORK-BUTTON -->
+  </section>
+  <!-- RECENT WORK -->
+
+  <!-- RECENT-WORK-BUTTON -->
+  <div class="recent-work-button container-fluid text-center">
+    <p class="pb-1">Looking to get in touch or talk about a project?</p>
+    <button type="button" data-bs-toggle="modal" data-bs-target="#exampleModal">Contact</button>
+  </div>
+  <!-- /RECENT-WORK-BUTTON -->
 
   <!-- FOOTER -->
   <div class="footer">
