--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="design/styles.css">
     <link rel="stylesheet" href="https://use.typekit.net/hdh7fpe.css">
-    <title>DevByHassan | Front-End Developer, Designer, & Marketer</title>
+    <title>DevByHassan | Front-End Developer & Designer.</title>
 </head>
 <body>
 
@@ -20,39 +20,6 @@
           <video src="img/AdobeStock_344450452.mov" autoplay loop muted playsinline></video>
           <div class="callout">
             <h2>#DevByHassan</h2>
-            <button class="button inner" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal">Contact</button>
-          </div>
-
-          <!-- Modal -->
-          <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="modal-dialog">
-              <div class="modal-content">
-                <div class="modal-header">
-                  <h5 class="modal-title" id="exampleModalLabel">How can I help?</h5>
-                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                  <form>
-                    <div class="form-group mb-3">
-                      <label for="formGroupExampleInput">Name</label>
-                      <input type="text" class="form-control" id="formGroupExampleInput">
-                    </div>
-                  </form>
-                  <div class="mb-3">
-                    <label for="exampleFormControlInput1" class="form-label">Email address</label>
-                    <input type="email" class="form-control" id="exampleFormControlInput1">
-                  </div>
-                  <div class="mb-3">
-                    <label for="exampleFormControlTextarea1" class="form-label">Additional Details</label>
-                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-                  </div>
-                </div>
-                <div class="modal-footer">
-                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                  <button type="button" class="btn btn-light">Submit</button>
-                </div>
-              </div>
-            </div>
           </div>
         </div>
       </div>
@@ -216,7 +183,7 @@
   <!-- RECENT-WORK-BUTTON -->
   <div class="recent-work-button container-fluid text-center">
     <p class="pb-1">Looking to get in touch or talk about a project?</p>
-    <button type="button" data-bs-toggle="modal" data-bs-target="#exampleModal">Contact</button>
+    <a class="contact-button" href="mailto:hassan.issa2@outlook.com">Contact</a>
   </div>
   <!-- /RECENT-WORK-BUTTON -->
 
@@ -226,5 +193,6 @@
   </div>
   <!-- /FOOTER-->
 
+  <script src="js/apps.js"></script>
 </body>
 </html>
